--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,8 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.10"
-      - name: install
-        run: make install
       - name: lint
-        run: make lint
+        run: make install && make lint
 
   tests:
     runs-on: ubuntu-latest
